# INST414-SEM-PROJ

-sem-proj/: Makefile  README.md  pyproject.toml
-sem-proj/notebooks/: Sales_Prediction_Ptyp-Osmund Fosu Rockson.ipynb
-sem-proj/references/: Conversion_Data_Dictionary.txt
